# lambda-opencv-rust-sample

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.lambda-opencv  Dockerfile.lambda-opencv-rust  README.md  memo.md  template.yaml
src/: app_service.rs  drawer.rs  main.rs  s3_service.rs
