[package]
name = "lambda-opencv-rust-sample"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
overflow-checks = true

[dependencies]
# https://crates.io/crates/lambda_runtime
lambda_runtime = "0.5.1"
# https://crates.io/crates/tokio
tokio = "1.19.2"
# https://crates.io/crates/serde_json
serde_json = "1.0.81"

# https://crates.io/crates/anyhow
anyhow = { version = "1.0.58", features = ["backtrace"] }
# https://crates.io/crates/log
log = "0.4.17"
# https://crates.io/crates/tracing
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

# https://crates.io/crates/derive-new
derive-new = "0.5.9"

# https://crates.io/crates/percent-encoding
percent-encoding = "2.1.0"

aws-types = "0.14.0"
aws-config = "0.14.0"
aws-sdk-s3 = "0.14.0"

# https://crates.io/crates/opencv
opencv = "0.65.0"

# https://crates.io/crates/bytes
bytes = "1.1.0"

[dev-dependencies]
# https://crates.io/crates/pretty_assertions
pretty_assertions = "1.2.1"
